--- a/homework.html
+++ b/homework.html
@@ -11,10 +11,10 @@
     <link rel="background image" type="image/png" href="images/concrete_seamless.png"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC&display=swap" rel="stylesheet">
-   <title>Super Slick Company</title>
+    <title>Super Slick Company</title>
   </head>
   <body>
-    <a class = "skip">Skip to Main Content</a>
+    <a class = "skip" href = "#skip">Skip to Main Content</a>
     <header>
       <img src="images/logo.png" alt="" id = "logo">
       <nav>
